No header/footer texts from browser when printing

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" moznomarginboxes="">
 <head>
 	<title>Space Empires Production Sheet Generator</title>
 	<meta charset="utf-8"/>
@@ -155,7 +155,8 @@
 		@media print {
 			@page{
 				height: 100%;
-				margin: 2em;
+				margin: 1em;
+				padding: 0em;
 				size: auto landscape;
 			}
 			#setup {
